Fix placement issue on mobile

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1136,17 +1136,11 @@ header h4 {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-@media only screen and (max-width: 648px) {
-  header h4 {
-    width: 80%;
-    left: 10%;
-  }
-}
 header .header__night-mode {
   display: block;
   height: 48px;
   width: 48px;
-  float: right;
+  float: left;
   background: url("../assets/icons/icon_moon.svg") center center no-repeat;
   transform: rotate(40deg);
   -webkit-transition: transform 0.3s;
